--- a/Main.html
+++ b/Main.html
@@ -1,19 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Use correct character set. -->
+<meta charset="utf-8">
+<!-- Tell IE to use the latest, best version. -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 <script src="Cesium/Build/Cesium/Cesium.js"></script>
 <script src="bower_components/jquery/jquery.js"></script>
 <script src="bower_components/papaparse/papaparse.min.js"></script>
 <link rel="stylesheet" href="Cesium/Build/Cesium/Widgets/widgets.css"></script>
 
+  <style>
+
+    html,
+    body,
+    #cesiumDiv {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+
+    #toolbar {
+      position: absolute;
+      z-index: 2;
+      top: 5px;
+      left: 5px;
+      background: rgba(42, 42, 42, 0.8);
+      padding: 4px;
+      border-radius: 4px;
+      color: white;
+      font-family: arial;
+    }
+  </style>
+
 </head>
 
 <body>
-<div id="cesiumMenu">
-  <p>Upload a CSV File:</p>
-  <input type="file" id="csv-file" name="files"/>
+
 
 </div>
+  <div id="toolbar">
+    <p id='metaLatitude'>Latitude: </p>
+    <p id='metaLongitude'>Longitude: </p>
+    <p>Upload a CSV File:</p>
+  	<input type="file" id="csv-file" name="files"/>
+  </div>
 <div id="cesiumDiv"></div>
 
 
